--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
 header {
   position: absolute;
   text-align: center;
-  width: 70%;
+  width: 65%;
   height: 150px;
   background: black;
   border: solid lawngreen 1px; 
@@ -30,7 +30,7 @@ header {
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 48px;
   line-height: 95px;
   background: black;
   font-family:'Matrix_vs_Miltown Regular';
@@ -47,14 +47,23 @@ h1 {
   background: black;
 }
 #nscore {
-  margin-left: 200px;
+  margin-left: 150px;
   position: absolute;
   text-align: center;
   width: 10%;
   color: lawngreen;
   background: black;
-
 } 
+
+#missed {
+  margin-left: 650px;
+  position: absolute;
+  /*float: right;*/
+  text-align: center;
+  width: 20%;
+  color: lawngreen;
+  background: black;
+}
 #timer{
   position: absolute;
   left: 425px;
@@ -85,7 +94,7 @@ header:hover span{
   color: lawngreen;
   font-weight: bold;
   float: right;
-  margin-right: 75px;
+  margin-right: 35px;
 }
 
 .wrapper {
@@ -96,7 +105,7 @@ header:hover span{
   border: solid lawngreen 1px; 
   position: absolute;
   text-align: center;
-  width: 70%; 
+  width: 65%; 
   height: auto;
   background:black; 
   transform: translate(-50%, -50%);
@@ -131,26 +140,11 @@ body {
 
 canvas {display:block;}
 
-/*#author {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  color : #0F0;
-  z-index : 1;
-  box-sizing: border-box;
-  vertical-align: middle;
-}*/
-
-
 span {
   font-family: monospace;
   font-size: 1.5em;
 }
-/*span:after {
-  content:"_gheorghe";
-  opacity: 0;
-  animation: cursor 1s infinite;
-}*/
+
 @keyframes cursor {
   0% {
       opacity: 0;
